syntax = "proto3";

package users.v1;

option go_package = "api/src/generated/users/v1";

message UserProto {
  string id = 1;
  string google_id = 2;
  string email = 3;
  string name = 4;
  string default_language = 5;
  string default_region = 6;
  bool is_dark_mode_enabled = 7;
  bool is_active = 8;
  bool is_admin = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  string username = 12;
}
